syntax = "proto3";

option csharp_namespace = "DarkDeeds.AuthServiceApp.Contract";

package authServiceApp;

service AuthService {
  rpc SignIn (SignInRequest) returns (SignInReply);
  rpc SignUp (SignUpRequest) returns (SignUpReply);
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInReply {
  string token = 1;
  SignInResult result = 2;
  
  enum SignInResult {
    Unknown = 0;
    Success = 1;
    WrongUsernamePassword = 2;
  }
}

message SignUpRequest {
  string username = 1;
  string password = 2;
}

message SignUpReply {
  string token = 1;
  SignUpResult result = 2;

  enum SignUpResult {
    Unknown = 0;
    Success = 1;
    UsernameAlreadyExists = 2;
    PasswordInsecure = 3;
    InvalidUsername = 4;
  }
}